# com-idealo-product-api/src/main/java/com/idealo/product/data/BaseEntity.java
@@ -1,4 +1,4 @@
-package com.idealo.checkout.data;
+package com.idealo.product.data;
 
 import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
